--- a/projects/angular/src/forms/styles/_properties.forms.scss
+++ b/projects/angular/src/forms/styles/_properties.forms.scss
@@ -79,9 +79,9 @@
     --clr-forms-range-progress-fill-color: #{tokens.$cds-alias-object-interaction-background-highlight};
     --clr-forms-range-track-color: #{tokens.$cds-alias-object-container-background-shade};
     --clr-forms-range-track-border-color: #{tokens.$cds-alias-object-interaction-background-highlight};
-    --clr-forms-range-thumb-height: #{tokens.$cds-global-space-7};
-    --clr-forms-range-track-height: #{tokens.$cds-global-space-3};
-    --clr-forms-range-track-border-radius: #{tokens.$cds-global-space-2};
+    --clr-forms-range-thumb-height: #{density.$clr-base-icon-size-s};
+    --clr-forms-range-track-height: #{density.$clr-base-layout-space-2xs};
+    --clr-forms-range-track-border-radius: #{density.$clr-base-border-radius-s};
     --clr-forms-range-track-border-width: #{tokens.$cds-global-space-1};
     --clr-forms-range-progress-fill-color-disabled: #{tokens.$cds-alias-object-interaction-color-disabled};
     --clr-forms-range-track-color-disabled: #{tokens.$cds-alias-status-disabled-tint};
