feat(timeline): use density layout tokens (#1852)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [ ] Bugfix
- [X] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: CDE-2757

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [X] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

---------

Co-authored-by: GitHub <noreply@github.com>

--- a/projects/angular/src/timeline/_properties.timeline.scss
+++ b/projects/angular/src/timeline/_properties.timeline.scss
@@ -6,6 +6,7 @@
  */
 @use '../utils/mixins';
 @use '@cds/core/tokens/tokens.scss';
+@use '../layout/density/' as density;
 
 @include mixins.exports('timeline.properties') {
   :root [cds-theme] {
@@ -22,7 +23,8 @@
 
     // body (title)
     --clr-timeline-step-title-font-weight: #{tokens.$cds-alias-typography-font-weight-semibold};
+    --clr-timeline-icon-size: #{density.$clr-base-icon-size-3xl};
 
-    --clr-timeline-step-internal-spacing: #{tokens.$cds-global-space-6}; // internal property cannot be exposed
+    --clr-timeline-step-internal-spacing: #{density.$clr-base-vertical-offset-l}; // internal property cannot be exposed
   }
 }
