--- a/projects/angular/src/forms/styles/_file-input.clarity.scss
+++ b/projects/angular/src/forms/styles/_file-input.clarity.scss
@@ -7,8 +7,6 @@
 
 @use 'sass:map';
 
-@use '@cds/core/tokens/tokens.scss';
-
 @use '../../utils/mixins';
 @use '../../utils/variables/variables';
 @use '../../layout/density' as density;
@@ -99,11 +97,13 @@
       display: flex;
       flex-wrap: wrap;
       align-items: center;
-      column-gap: tokens.$cds-global-space-3;
+      gap: density.$clr-base-gap-xs;
       max-width: unset;
 
       .clr-subtext {
         margin: 0;
+        align-self: unset;
+        padding: 0;
       }
     }
 
