feat(progress-bar): use density layout tokens (#1898)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [ ] Bugfix
- [x] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: CDE-2853

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [x] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

---------

Co-authored-by: Andrea Fernandes <andreaf1@vmware.com>
Co-authored-by: Delchina Angelova <LynxDelli@users.noreply.github.com>
Co-authored-by: GitHub <noreply@github.com>
Co-authored-by: Delchina Angelova <delchina.angelova@broadcom.com>

--- a/projects/angular/src/layout/density/_properties.density.scss
+++ b/projects/angular/src/layout/density/_properties.density.scss
@@ -110,6 +110,8 @@
   --clr-base-spinner-stroke-m: #{tokens.$cds-alias-object-border-width-400};
   --clr-base-spinner-stroke-l: #{tokens.$cds-global-space-4}; // default
 
+  --clr-base-progress-bar-height: #{tokens.$cds-global-space-6};
+
   [clr-density='regular'] {
     --clr-base-typography-font-size-caption-small: #{mixins.baselinePx(10)};
     --clr-base-typography-font-size-caption: #{mixins.baselinePx(11)};
@@ -212,6 +214,8 @@
     --clr-base-spinner-stroke-s: #{tokens.$cds-alias-object-border-width-200};
     --clr-base-spinner-stroke-m: #{tokens.$cds-alias-object-border-width-400};
     --clr-base-spinner-stroke-l: #{tokens.$cds-global-space-4}; // default
+
+    --clr-base-progress-bar-height: #{tokens.$cds-global-space-6};
   }
 
   [clr-density='compact'] {
@@ -316,6 +320,8 @@
     --clr-base-spinner-stroke-s: #{tokens.$cds-alias-object-border-width-200};
     --clr-base-spinner-stroke-m: #{tokens.$cds-alias-object-border-width-300};
     --clr-base-spinner-stroke-l: #{tokens.$cds-alias-object-border-width-400}; // default
+
+    --clr-base-progress-bar-height: #{mixins.baselinePx(10)};
   }
   // NOT SUPPORTED AT THE MOMENT
   // [clr-density='ultra-compact'] {
@@ -415,5 +421,7 @@
   //   --clr-base-spinner-s: var(--clr-base-icon-size-s);
   //   --clr-base-spinner-m: #{tokens.$cds-global-space-7};
   //   --clr-base-spinner-l: var(--clr-base-layout-space-4xl); // default
+  //
+  //   --clr-base-progress-bar-height: #{tokens.$cds-global-space-5};
   // }
 }
