--- a/projects/angular/src/layout/density/_variables.density.scss
+++ b/projects/angular/src/layout/density/_variables.density.scss
@@ -104,3 +104,5 @@ $clr-base-spinner-l: var(--clr-base-spinner-l);
 $clr-base-spinner-stroke-s: var(--clr-base-spinner-stroke-s);
 $clr-base-spinner-stroke-m: var(--clr-base-spinner-stroke-m);
 $clr-base-spinner-stroke-l: var(--clr-base-spinner-stroke-l);
+
+$clr-base-header-height: var(--clr-base-header-height);
