--- a/projects/angular/src/layout/nav/_responsive-nav.clarity.scss
+++ b/projects/angular/src/layout/nav/_responsive-nav.clarity.scss
@@ -17,6 +17,7 @@
 @use '../tabs/tabs.clarity' as tabs;
 @use 'variables.subnav' as nav-variables;
 @use '@cds/core/tokens/tokens.scss';
+@use '../../layout/density';
 
 @mixin sliding-nav-positioning($top: 0, $right: auto, $bottom: 0, $left: 0) {
   display: flex;
@@ -201,10 +202,12 @@
         border: none;
         background: none;
         cursor: pointer;
-        font-size: tokens.$cds-global-space-9;
         @include mixins.equilateral(header-variables.$clr-header-height);
+
+        // Such a STUPID hack it will be better to use CDS-ICON `bars` for `hamburger` and `ellipsis-vertical` for `dots`
+        // 4px to vertically align the trigger lines. display flex was not working on all browsers.
         padding: 0 0 tokens.$cds-global-space-3 0;
-        //4px to vertically align the trigger lines. display flex was not working on all browsers.
+
         text-align: center;
         white-space: nowrap;
 
@@ -254,10 +257,10 @@
         // TODO: more specificity in classname is preferable to nesting...
         .nav {
           padding-left: 0;
-          gap: tokens.$cds-global-space-5;
+          gap: density.$clr-base-gap-s;
 
           .nav-item {
-            height: tokens.$cds-global-space-11;
+            height: density.$clr-base-row-height-m;
             margin-right: 0;
           }
 
@@ -350,6 +353,7 @@
           .header-nav.clr-nav-level-2 {
             .nav-link {
               flex: 0 0 auto;
+              height: unset;
 
               .nav-icon,
               .fa {
@@ -358,12 +362,9 @@
 
               .nav-text {
                 display: inline-block;
-                padding: tokens.$cds-global-space-4 0 tokens.$cds-global-space-4 tokens.$cds-global-space-9;
                 white-space: normal;
                 // color, line-height and font-weight should be removed or refactored in separate JIRA
                 color: responsive-nav-variables.$clr-sliding-panel-text-color;
-                line-height: tokens.$cds-global-space-9;
-                font-weight: normal;
               }
 
               opacity: 1;
