--- a/projects/angular/src/layout/tabs/_tabs.clarity.scss
+++ b/projects/angular/src/layout/tabs/_tabs.clarity.scss
@@ -111,6 +111,11 @@
   .tabs-actions {
     display: inline-flex;
     width: 100%;
+    height: 100%;
+
+    button {
+      margin: 0;
+    }
 
     &[position~='left'] {
       justify-content: start;
