Switch margins to gap

--- a/projects/angular/src/accordion/stepper/_stepper.clarity.scss
+++ b/projects/angular/src/accordion/stepper/_stepper.clarity.scss
@@ -105,7 +105,7 @@
 
     .clr-step-button {
       margin-top: density.$clr-base-gap-l;
-      margin-right: density.$clr-base-horizontal-offset-l;
+      margin-right: density.$clr-base-gap-m;
       margin-bottom: 0;
     }
   }
