--- a/projects/angular/src/forms/datepicker/_datepicker.clarity.scss
+++ b/projects/angular/src/forms/datepicker/_datepicker.clarity.scss
@@ -268,6 +268,10 @@
     color: datepicker-variables.$clr-calendar-btn-picker-trigger-color;
     text-align: center;
     @include mixins.overflow-ellipsis();
+
+    &.year-range {
+      width: calc(datepicker-variables.$clr-calendar-btn-picker-trigger-width * 2);
+    }
   }
 
   .monthpicker,
